@@ -1,6 +1,7 @@
 Changes in 4.6.2
 ----------------
 ** Improvement
+    * [FELIX-6427] - Obfuscate configuration properties marked as password in metatype in configuration printer
     * [FELIX-6390] - Refactor the default authentication mechanism of the webconsole to be a WebConsoleSecurityProvider2
     * [FELIX-6423] - Use property type password for password
     * [FELIX-6424] - Update commons-io to 2.8.0
